fix: add dark mode (#11)

--- a/src/content-elements/styles/variables/content-elements/dark-mode/content-element-list.scss
+++ b/src/content-elements/styles/variables/content-elements/dark-mode/content-element-list.scss
@@ -1,8 +1,4 @@
-@use "./content-element";
-@use "../mixins";
-
-
-:root {
+.dark-mode {
   /**
    * User input values.
    */
