--- a/src/content-elements/styles/variables/content-elements/default/content-element-text.scss
+++ b/src/content-elements/styles/variables/content-elements/default/content-element-text.scss
@@ -11,3 +11,7 @@
    * Calculated values.
    */
 }
+
+body {
+  color: var(--text-color);
+}
