--- a/src/content-elements/styles/variables/content-elements/index.scss
+++ b/src/content-elements/styles/variables/content-elements/index.scss
@@ -1,6 +1,6 @@
-@forward 'content-element';
-@forward 'content-element-text';
-@forward 'content-element-image';
-//
-@forward 'content-element-block';
-@forward 'content-element-list';
+// TODO FAQ: Include dot or not? ('ce' vs '.ce')?
+$ce-base-name: '.ce'; // '.content-element';
+//$name: '.content-element'';
+
+@forward 'default';
+@forward 'dark-mode';
